# SnoreDetectAlgorithm

./: .gitignore  CMakeLists.txt  README.md  dataset_build.py
include/: buildMFCC.h  detectSnore.h
m/: detect_snore_vq.m  readMFCC.m  saveCodebook.m  vq_codebooks.h  vq_codebooks.mat
src/: buildMFCC.cpp  detectSnore.cpp  main.cpp
